[gd_scene load_steps=8 format=3 uid="uid://c413ymv8c05h2"]

[ext_resource type="Script" path="res://src/Player/player_stats.gd" id="1_64fcd"]
[ext_resource type="Texture2D" uid="uid://dqphob3o0vmq5" path="res://assets/Player/dropup.png" id="2_b2io6"]
[ext_resource type="Theme" uid="uid://c1o0775c62lgb" path="res://src/Player/PopupPanel.tres" id="2_wwlih"]
[ext_resource type="Texture2D" uid="uid://dbpwgnxp0xdbj" path="res://assets/Player/dropdown.png" id="3_8p3oh"]
[ext_resource type="Texture2D" uid="uid://dnuv3k3i3n8ev" path="res://assets/creatures/resource_basic.png" id="3_wg0d0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_734gv"]

[sub_resource type="Theme" id="Theme_oepgj"]
CheckButton/colors/font_outline_color = Color(0, 0, 0, 0)
CheckButton/icons/checked = ExtResource("2_b2io6")
CheckButton/icons/unchecked = ExtResource("3_8p3oh")
CheckButton/styles/focus = SubResource("StyleBoxEmpty_734gv")

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_64fcd")

[node name="ExpandedPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 204.0
offset_bottom = 177.0
theme = ExtResource("2_wwlih")

[node name="VBoxContainer" type="VBoxContainer" parent="ExpandedPanel"]
layout_mode = 0
offset_top = 33.0
offset_right = 196.0
offset_bottom = 374.0

[node name="Money" type="HSplitContainer" parent="ExpandedPanel/VBoxContainer"]
layout_mode = 2

[node name="MoneyText" type="Label" parent="ExpandedPanel/VBoxContainer/Money"]
layout_mode = 2
text = "Money: "

[node name="Money" type="Label" parent="ExpandedPanel/VBoxContainer/Money"]
layout_mode = 2
text = "$5 billion"
horizontal_alignment = 2

[node name="Resource1" type="HSplitContainer" parent="ExpandedPanel/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ExpandedPanel/VBoxContainer/Resource1"]
layout_mode = 2
texture = ExtResource("3_wg0d0")

[node name="R1" type="Label" parent="ExpandedPanel/VBoxContainer/Resource1"]
layout_mode = 2
text = "10000"
horizontal_alignment = 2

[node name="Spacer" type="Label" parent="ExpandedPanel/VBoxContainer"]
layout_mode = 2

[node name="Popularity" type="HSplitContainer" parent="ExpandedPanel/VBoxContainer"]
layout_mode = 2

[node name="PopularityText" type="Label" parent="ExpandedPanel/VBoxContainer/Popularity"]
layout_mode = 2
text = "Popularity:"

[node name="Popularity" type="Label" parent="ExpandedPanel/VBoxContainer/Popularity"]
layout_mode = 2
text = "you suck"
horizontal_alignment = 2

[node name="Expectation" type="HSplitContainer" parent="ExpandedPanel/VBoxContainer"]
layout_mode = 2

[node name="ExpectationText" type="Label" parent="ExpandedPanel/VBoxContainer/Expectation"]
layout_mode = 2
text = "Expectation Modifer:"

[node name="Expectation" type="Label" parent="ExpandedPanel/VBoxContainer/Expectation"]
layout_mode = 2
text = "1.0"
horizontal_alignment = 2

[node name="CollapsedPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_right = 204.0
offset_bottom = 19.0
theme = ExtResource("2_wwlih")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = -10.0
offset_right = 212.0
offset_bottom = 30.0
theme = SubResource("Theme_oepgj")
text = "Stats"

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
